force-app/main/default/objects/JobDependency__mdt/JobDependency__mdt.object-meta.xml
<CustomObject>
    <description>Defines a directed edge in the pipeline DAG. StepToRun__c will not execute until DependsOnStep__c is Completed. Multiple records with the same StepToRun__c create an AND-join.</description>
    <label>Job Dependency</label>
    <pluralLabel>Job Dependencies</pluralLabel>
</CustomObject>