force-app/main/default/objects/JobDependency__mdt/fields/DependsOnStep__c.field-meta.xml
<CustomField>
    <fullName>DependsOnStep__c</fullName>
    <description>DeveloperName of the JobStep__mdt that must reach Completed status before StepToRun__c is eligible for dispatch.</description>
    <label>Depends On Step</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>