force-app/main/default/objects/JobDependency__mdt/fields/Pipeline__c.field-meta.xml
<CustomField>
    <fullName>Pipeline__c</fullName>
    <description>Parent pipeline this dependency edge belongs to.</description>
    <label>Pipeline</label>
    <referenceTo>JobPipeline__mdt</referenceTo>
    <relationshipLabel>Dependencies</relationshipLabel>
    <relationshipName>Dependencies</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>