force-app/main/default/objects/JobDependency__mdt/fields/StepToRun__c.field-meta.xml
<CustomField>
    <fullName>StepToRun__c</fullName>
    <description>DeveloperName of the JobStep__mdt that is waiting to execute. This step will not start until DependsOnStep__c is Completed.</description>
    <label>Step To Run</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>